--- a/docfx_project/site/home/techguides/run-factory.html
+++ b/docfx_project/site/home/techguides/run-factory.html
@@ -149,7 +149,7 @@ If the factory environment creation has failed during the previous factory run, 
 <ul>
 <li><p><img src="images/view-test-scripts-location.png" alt=""> - click to view the test scripts location in the Artifactory (you need to login with your user credentials)</p>
 </li>
-<li><p><img src="images/application-logs.png" alt=""> - click to download the factory logs</p>
+<li><p><img src="images/application-logs.png" alt=""> - click to download the factory logs (the logs can be exported regardless of the status of the factory run)</p>
 </li>
 <li><p><img src="images/downloadable-icon2.png" alt=""> - click on the downloadable icon to store the results on your local machine</p>
 </li>
