--- a/docfx_project/site/home/techguides/user-creation-in-paas.html
+++ b/docfx_project/site/home/techguides/user-creation-in-paas.html
@@ -110,7 +110,12 @@
 responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
 </blockquote>
 <p>On their first login, all new users will be forced to reset the password that was initially created by the Organisation Admin.</p>
-<p><img src="images/user-change-password.png" alt="user-change-password"></p>
+<p><img src="images/user-change-password.png" alt=""></p>
+<p><br>
+</br></p>
+<h1 id="show-tooltips">Show tooltips</h1>
+<p>As an organization admin you can enable the tooltips in the portal that show what are the required permissions for the actions on hover.</p>
+<p><img src="images/show-permissions.png" alt=""></p>
 <h1 id="user-roles-management">User Roles Management</h1>
 <p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).</p>
 <p><img src="images/see-user-role.png" alt=""></p>
