--- a/docfx_project/site/home/toc.html
+++ b/docfx_project/site/home/toc.html
@@ -99,10 +99,16 @@
                           <a href="techguides/environment-basic-operations.html" name="" title="Perform Environment Basic Operations">Perform Environment Basic Operations</a>
                         </li>
                         <li>
-                          <a href="techguides/git-folder-standardization.html" name="" title="Git Folder Standardization">Git Folder Standardization</a>
+                          <a href="techguides/deploy-an-update-to-an-existing-environment.html" name="" title="Deploy an update to an existing environment">Deploy an update to an existing environment</a>
                         </li>
                         <li>
-                          <a href="techguides/deploy-an-update-to-an-existing-environment.html" name="" title="Deploy an update to an existing environment">Deploy an update to an existing environment</a>
+                          <a href="techguides/save-as-new-template.html" name="" title="Self-service templates">Self-service templates</a>
+                        </li>
+                        <li>
+                          <a href="techguides/upgrade-trials.html" name="" title="Upgrade Trials">Upgrade Trials</a>
+                        </li>
+                        <li>
+                          <a href="techguides/itss-test-framework-template.html" name="" title="ITSS Test Framework Template Implementation">ITSS Test Framework Template Implementation</a>
                         </li>
                         <li>
                           <a href="techguides/t24-development.html" name="" title="Develop T24 packages, plugins and Code">Develop T24 packages, plugins and Code</a>
@@ -248,14 +254,8 @@
                       </ul>  </li>
                 </ul>  </li>
             <li>
-              <span class="expand-stub"></span>
-              <a>Release information</a>
-                
-                <ul class="nav level2">
-                  <li>
-                    <a href="techguides/release-info-2020.html" name="" title="2020">2020</a>
-                  </li>
-                </ul>  </li>
+              <a href="techguides/release-notes.html" name="" title="Release information">Release information</a>
+            </li>
             <li>
               <a href="faq.html" name="" title="FAQs">FAQs</a>
             </li>
