--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -667,7 +667,7 @@ o</p>
 </div>
 <p><strong>It is mandatory to have the db.properties file included along with your H2 DB .zip file, otherwise the environment will be created using the default modelbank credentials.</strong></p>
 <p>  <img src="images/tafjdb.png" alt=""></p>
-<p>You cann add the db.properties file into the TAFJDB.zip. The db.properties file contains the db name, clientdb user and pass, as well as the dbuser and dbpassword where:</p>
+<p>You can add the db.properties file into the TAFJDB.zip. The db.properties file contains the db name, clientdb user and pass, as well as the dbuser and dbpassword where:</p>
 <ul>
 <li><p>The dbuser is the Transact/ T24 user which has SUPER.USER privileges</p>
 </li>
