--- a/home/techguides/save-as-new-template.html
+++ b/home/techguides/save-as-new-template.html
@@ -99,11 +99,14 @@
 <li><p>Read the information in the pop-up. Fill in the blanks, tick the box and then click on <strong>Save Template</strong>.</p>
 <p>   <img src="images/save-as-new-template.png" alt=""> </p>
 </li>
-<li><p>The template creation is initiated and you will be able to see it in the template catalog shortly. 
-<br>
-</br></p>
+<li><p>The template creation is initiated and you will be able to see it in the template catalog shortly. </p>
+</li>
+<li><p>After the template is created you can find it in the templates catalogue. Unlike the pre-defined templates, those resulted using the <strong>Save as New Template</strong> feature contain the Artifactory URL for each component (go to the <em>Components List</em> tab to access them).</p>
+<p><img src="./images/components-artifactory-url.png" alt=""></p>
 </li>
 </ol>
+<p><br>
+</br></p>
 <h2 id="post-template-creation-actions">Post template creation actions</h2>
 <p>After the template is successfully created you can:</p>
 <ol>
@@ -115,6 +118,8 @@
 <ol>
 <li>Run a factory using the template (learn <a href="http://documentation.temenos.cloud/home/techguides/run-factory.html">here</a> how to run factories).</li>
 </ol>
+<div class="NOTE"><h5>Note</h5><p>Only Templates which are created successfully using <strong>Save As Template option</strong> are displayed in the drop-down while creating Environments or Factories.</p>
+</div>
 <h2 id="tutorial">Tutorial</h2>
 <p>Watch the video tutorial <a href="https://www.youtube.com/watch?v=4G7PH5tsej0&amp;feature=youtu.be"><strong>here</strong></a>.</p>
 <p><br>
