--- a/home/techguides/automated-factories.html
+++ b/home/techguides/automated-factories.html
@@ -144,6 +144,11 @@
 </li>
 <li><p><strong>Template</strong>: choose an Environment Template from the drop-down list. Based on this template  the environments will be created where you will be able to test different products.</p>
 </li>
+</ol>
+<div class="NOTE"><h5>Note</h5><p>You can set up a factory based on a custom template created from either a factory run or an Extend environment (the template is created by you via the <a href="http://documentation.temenos.cloud/home/techguides/save-as-new-template.html">&#39;Save as New Template&#39;</a> feature). A factory created using a custom template is not associated with any product and promotion configuration, therefore in the <em>Select Principle Products</em> fields you can&#39;t select any of you products. This allows you to run the test cases on a newly created template based on upgrades.</p>
+</div>
+<p><img src="./images/factory-product-configuration-custom-template.png" alt=""></p>
+<ol>
 <li><p><strong>Select Principle Products</strong> and <strong>Select Other Products</strong>: select none, one or more products from the drop-down. The products selected at this stage are promoted to the next stage (the configured one).  You must select at least one <strong>Principal</strong> or <strong>Other Product</strong> in any of these two fields to progress with the factory creation. I.e.: in the screenshot below we selected a product only in the <strong>Other Product</strong>.</p>
 </li>
 <li><p><strong>Source Stage</strong>: add the stage with the stable version of components (the components from this stage will be promoted to the target stage during the factory run).</p>
@@ -151,7 +156,7 @@
 <li><p>Click <strong>Next</strong>.</p>
 </li>
 </ol>
-<p><img src="images/factory-product-configuration.png" alt=""> </p>
+<p><img src="./images/factory-product-configuration.png" alt=""> </p>
 <h2 id="test-configuration">Test Configuration</h2>
 <p>The Test Configuration consists in in-build service tasks and is used to  trigger tests for a given factory-run, trigger export of application logs.</p>
 <p>Depending on your organisation settings, you may / may not have a Default Workflow or the option to select from a list of workflows defined by the users from your organisation. During this phase, you have to fill in the <strong>Workflow</strong> steps - a sample which displays the steps (in that exact sequence) that are executed by the selected workflow. Assuming that you select the <strong>Default Workflow</strong>, you need to fill in the following fields:</p>
@@ -185,8 +190,10 @@
 <p><br>
 </br></p>
 <h2 id="promotion-configuration">Promotion Configuration</h2>
-<p>This promotion configuration enables you to select all the required products to promote along with their target stage. In addition, you can select the Test Components along with the target stage if they need promotion as well. </p>
-<p>Following the 202011 release, it is not mandatory to select any product or test at this factory creation stage.</p>
+<p>The promotion configuration enables you to select all the required products to promote along with their target stage. In addition, you can select the Test Components along with the target stage if they need promotion as well. </p>
+<p>Following the 202011 Platform release, it is not mandatory to select any product or test at this factory creation stage.</p>
+<div class="NOTE"><h5>Note</h5><p>If in the <em>Product Configuration</em>  you selected a custom template then you are not able to define the <em>Promotion Configuration</em> stage as no promotion takes place following this setup. Instead, you only  run the test cases from a newly created template. </p>
+</div>
 <p><img src="images/factory-promotion-configuration.png" alt=""></p>
 <h2 id="factory-scheduler">Factory Scheduler</h2>
 <p>You can configure the factory scheduler to automatically run the tests and have the results available daily. This feature is optional and you can opt to set it/ don&#39;t set it during the factory creation stage.</p>
