--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -84,10 +84,9 @@
 <p>This document can be used by technical staff who need to create Users on the Temenos Continuous Deployment Platform and associate to each user a ssh key. </p>
 <h2 id="how-to-create-users">How to create Users</h2>
 <p>The Administrator can navigate to the Users section on the portal, create more users and invite them to access and use the portal using the URL link. In this way the administrator is in control of who receives the URL link and which users can access the Organisation.</p>
-<p>The users can access their organisation only, view their user profiles and perform various operations according to the set of user permissions set by the Organisation Administrator.</p>
-<p> Note that only the users with the &#39;Admin&#39; permission can create more users. To manage/ see the users please refer to the below:</p>
-<p>•   Login to your organisation portal using the link and the credentials provided.</p>
+<p> If you belong to more than one organizations then a pop-up appears after entering your username and password. Select the organization you want to log in. </p>
 <p><img src="images/user-login.png" alt="portal login"></p>
+<p> Note that only the users with the &#39;Admin&#39; permission can create more users. To manage/ see the users please refer to the below.</p>
 <p><img src="images/users-tab.png" alt=""></p>
 <ol>
 <li><p>Go to the menu on the left and then click Users tab, as below:</p>
@@ -108,6 +107,9 @@
 <blockquote><p><strong>Important!</strong>: It is the Organisation Admin&#39;s 
 responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
 </blockquote>
+<h1 id="enable-tooltips">Enable tooltips</h1>
+<p>As an organization admin you can enable the tooltips in the portal that show what are the required permissions for the actions on hovering the mouse on the menus and buttons.</p>
+<p><img src="images/show-permissions.png" alt=""></p>
 <h1 id="change-password">Change Password</h1>
 <p>To change the password you need to follow the next steps:</p>
 <ol>
