--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -84,7 +84,7 @@
 <p>This document can be used by technical staff who need to create Users on the Temenos Continuous Deployment Platform and associate to each user a ssh key. </p>
 <h2 id="how-to-create-users">How to create Users</h2>
 <p>The Administrator can navigate to the Users section on the portal, create more users and invite them to access and use the portal using the URL link. In this way the administrator is in control of who receives the URL link and which users can access the Organisation.</p>
-<p> If you belong to more than one organizations then a pop-up appears after entering your username and password. Select the organization you want to log in. </p>
+<p> If you belong to more than one organizations then a pop-up appears after entering your username and password. Select the organization you want to access. </p>
 <p><img src="images/user-login.png" alt="portal login"></p>
 <p> Note that only the users with the &#39;Admin&#39; permission can create more users. To manage/ see the users please refer to the below.</p>
 <p><img src="images/users-tab.png" alt=""></p>
