--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -465,6 +465,8 @@ o</p>
 </tr>
 </tbody>
 </table>
+<p>Example of how the environment file should contain if you need to change the heap size:
+ <img src="images/java-heap-size.png" alt=""></p>
 <div class="NOTE"><h5>Note</h5><p>Do not leave multiple versions of the same component type in the GIT folder as this would produce undesired results.
 <br>
 </br></p>
