--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -465,7 +465,7 @@ o</p>
 </tr>
 </tbody>
 </table>
-<p>Example of how the environment file should contain if you need to change the heap size:
+<p>See below an example in which an environment file with the JAVA_OPTS change has been added inside the t24-addons folder:
  <img src="images/java-heap-size.png" alt=""></p>
 <div class="NOTE"><h5>Note</h5><p>Do not leave multiple versions of the same component type in the GIT folder as this would produce undesired results.
 <br>
