--- a/home/techguides/add-app-endpoint.html
+++ b/home/techguides/add-app-endpoint.html
@@ -150,7 +150,7 @@ Endpoint Description and URL are as per your choice. Type must be one of the opt
 <img src="images/app-endpoint-multi.png" alt="multiple endpoints multiple files"></p>
 </li>
 <li><p>After both files are deployed, the three endpoints for plugin1 and the two endpoints for plugin2 are displayed in the Endpoints section of the T24 application.</p>
-<p><img src="./images/endpoint-click.png" alt="multiple endpoints multiple files"></p>
+<p><img src="images/endpoint-click.png" alt="multiple endpoints multiple files"></p>
 </li>
 </ul>
 <h1 id="updateremove-endpoints">Update/Remove endpoints</h1>
