--- a/home/techguides/add-app-endpoint.html
+++ b/home/techguides/add-app-endpoint.html
@@ -111,15 +111,14 @@
 <div class="NOTE"><h5>Note</h5><p><strong>The URL must be of type: &quot;https://........&quot;</strong>.
 As a reference, if you want to insert an endpoint which links to your environment browser web, please check the related URL - for example: <a href="https://t24-xxxxxxxxxxxx.temenos.cloud/BrowserWeb/">https://t24-xxxxxxxxxxxx.temenos.cloud/BrowserWeb/</a>)</p>
 </div>
-<p>In order to create new endpoints for the T24 application of your Environment, the next steps must be followed:</p>
+<p>In order to create new endpoints for the Transact application of your Environment, the next steps must be followed:</p>
 <ul>
 <li><p>Clone the GitLab repository of your Environment in your local machine. For more details on how to clone a repository, check this <strong><a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html">page</a></strong>.</p>
 </li>
-<li><p>Create a file with <strong>.endpoint</strong> extension inside <strong>plugins</strong> folder of the cloned repository as in the bellow picture. The name of the file is not important, but it should be relevant for your requirement.
+<li><p>Create a file with <strong>.endpoint</strong> extension inside <strong>war-package</strong> folder of the cloned repository as in the bellow picture. The name of the file is not important, but it should be relevant for your requirement.
 <img src="images/endpoint-create.png" alt="create endpoint file"></p>
 </li>
-<li><p>Inside the <strong>.endpoint</strong> file, add a new line for each endpoint with the structure <strong>Your_Endpoint_Description~Your_Endpoint_URL~Your_Endpoint_Type</strong>, as per bellow picture:</p>
-<p><img src="images/app-endpoint-edit.png" alt="edit endpoint file"></p>
+<li><p>Inside the <strong>.endpoint</strong> file, add a new line for each endpoint with the structure <strong>Provider APIs~<a href="https://localhost/provider-apis/api/v1.0.0/meta/apidocs~clickable~true">https://localhost/provider-apis/api/v1.0.0/meta/apidocs~clickable~true</a></strong>, as per bellow picture:</p>
 <p><img src="images/app-endpoint-append.png" alt="edit endpoint file"></p>
 <div class="NOTE"><h5>Note</h5><p>&quot;<strong>~</strong>&quot; character is used as a separator between Endpoint Description, URL and Type and it must always be present in each endpoint line.
 Endpoint Description and URL are as per your choice. Type must be one of the options: <strong>clickable</strong>, <strong>copyable</strong> or <strong>downloadable</strong>.</p>
@@ -146,8 +145,7 @@ Endpoint Description and URL are as per your choice. Type must be one of the opt
 </ul>
 <h1 id="add-multiple-endpoints-from-multiple-files-at-the-same-time">Add multiple endpoints from multiple files at the same time</h1>
 <ul>
-<li><p>If you want to add endpoints for multiple plugins deployed in your Environment, you can add the endpoints of all plugins in a single file or you can also create a separate .endpoint file for each plugin for a better delimitation.
-<img src="images/app-endpoint-multi.png" alt="multiple endpoints multiple files"></p>
+<li><p>If you want to add endpoints for multiple plugins deployed in your Environment, you can add the endpoints of all plugins in a single file or you can also create a separate .endpoint file for each plugin for a better delimitation.</p>
 </li>
 <li><p>After both files are deployed, the three endpoints for plugin1 and the two endpoints for plugin2 are displayed in the Endpoints section of the T24 application.</p>
 <p><img src="images/endpoint-click.png" alt="multiple endpoints multiple files"></p>
