--- a/home/techguides/save-as-new-template.html
+++ b/home/techguides/save-as-new-template.html
@@ -107,6 +107,30 @@
 </ol>
 <p><br>
 </br></p>
+<h2 id="delete-a-custom-template">Delete a custom template</h2>
+<p>You can delete a template created through <strong>Save as New Template</strong> feature:</p>
+<ul>
+<li><p>On the templates page tick, in the filter box the <strong>Custom Templates</strong> - this action triggers the list of  templates any user from your organisation created.</p>
+</li>
+<li><p>Select the template you want to delete.</p>
+</li>
+<li><p>Click <strong>Delete Template</strong>.</p>
+<p><img src="./images/delete-custom-template.png" alt=""></p>
+<div class="NOTE"><h5>Note</h5><p>This button is visible only for the custom templates.</p>
+<p>You cannot restore a deleted template.</p>
+</div>
+</li>
+</ul>
+<p><br></p>
+<p>You cannot delete a custom template if:</p>
+<ul>
+<li><p>It is used in any factory.</p>
+</li>
+<li><p>It is used by any extend environment.</p>
+</li>
+</ul>
+<p><br>
+</br></p>
 <h2 id="post-template-creation-actions">Post template creation actions</h2>
 <p>After the template is successfully created you can:</p>
 <ol>
