--- a/home/extend.html
+++ b/home/extend.html
@@ -80,6 +80,8 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
+<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move to the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
 <p><strong>Extend</strong> your Temenos software functionality through self-service environments with Temenos product templates. </p>
 <p>Extend to allow for developers to create features and continuously improve and build business features.</p>
 <h2 id="environments-include">Environments include:</h2>
