--- a/home/techguides/itss-test-framework-template.html
+++ b/home/techguides/itss-test-framework-template.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="itss-test-framework-template-implementation">ITSS Test Framework Template Implementation</h1>
 
+<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="itss-test-framework-template-implementation">ITSS Test Framework Template Implementation</h1>
 <p>This page provides information about the ITSS Test Framework Template, the pre-requisites to run the template and an example of the test framework, its structure and a sample of the consolidated results file.</p>
 <h2 id="implementation">Implementation</h2>
 <p>The ITSS Test framework Template pre-requisites:</p>
