--- a/home/techguides/stage.html
+++ b/home/techguides/stage.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="stages">Stages</h1>
 
+<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="stages">Stages</h1>
 <p>A Stage is a logical name for a promotional stage. </p>
 <p>Every component/module developed by an organization needs to go through several steps to be declared ready for deployment to product. These steps are exactly what we call stages. </p>
 <p>Each stage has the following fields:</p>
