--- a/home/techguides/artifactory-test-cycle.html
+++ b/home/techguides/artifactory-test-cycle.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="artifactory-test-cycle">Artifactory Test Cycle</h1>
 
+<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="artifactory-test-cycle">Artifactory Test Cycle</h1>
 <p>Temenos uses JFrog Artifactory that serves as a binary repository manager and which is designed to provide an end to end automated solution for tracking artifacts from development to production.</p>
 <p>See below an example of how the Artifactory folders look like after configuring the streams, stages, components, products and the factory. </p>
 <p><img src="images/artifactory-test-structure.png" alt=""></p>
