--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="components--feature-description">Components – Feature Description</h1>
 
+<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="components--feature-description">Components – Feature Description</h1>
 <p>Components are individually deployable units that are understood by Temenos Continuous Deployment Platform based on the component type that each component refers to. </p>
 <p>Each component is associated to a component type to help Temenos Continuous Deployment Platform deploy the component. </p>
 <p>The <strong>Component Type</strong> field in the component data is the key to help the Temenos Continuous Deployment Platform Controllers deploy the right components in the right way. 
