--- a/home/techguides/export-import-database.html
+++ b/home/techguides/export-import-database.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="export-and-import-databases">Export and Import Databases</h1>
 
+<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="export-and-import-databases">Export and Import Databases</h1>
 <p>This user guide explains how to import and export databases of a Temenos cloud environment in order to migrate datasets across environments. </p>
 <p>Login to your organization on the TCD (Temenos Continuous Deployment) portal (<a href="https://portal.temenos.cloud/">portal.temenos.cloud</a>) read and accept the privacy notice.</p>
 <p><img src="images/db-login.png" width="450" height="200"></p>
