--- a/home/techguides/fcm-configuration.html
+++ b/home/techguides/fcm-configuration.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="configure-fcm-application">Configure FCM Application</h1>
 
+<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="configure-fcm-application">Configure FCM Application</h1>
 <p>Learn how to use FCM application by accessing it via Temenos Continuous Deployment Platform.</p>
 <div class="NOTE"><h5>Note</h5><p>Check also our <a href="https://www.youtube.com/watch?v=XBsmOZvg-z8" target="_blank"><strong>Video tutorial</strong> - to be updated.
 </a></p>
