--- a/home/techguides/manage-workflows.html
+++ b/home/techguides/manage-workflows.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="manage-workflows">Manage Workflows</h1>
 
+<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="manage-workflows">Manage Workflows</h1>
 <p>Workflows enable the user to run tests with multiple steps in a designated sequence. Based on the business needs, the workflow can be customized and the same can be added during the factory set-up.</p>
 <p>The workflow diagram consists of the following elements that can be dragged into a canvas:</p>
 <ul>
