--- a/home/techguides/run-factory.html
+++ b/home/techguides/run-factory.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h2 id="run-factory">Run Factory</h2>
 
+<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h2 id="run-factory">Run Factory</h2>
 <p>After setting-up a factory (see configuration steps <a href="http://documentation.temenos.cloud/home/techguides/automated-factories.html#set-up-create-a-automated-factory">here</a>, go to <strong>Dashboard</strong> on the main menu and select the factory you created (in case you have more factories). </p>
 <div class="NOTE"><h5>Note</h5><p>In order to run your factory, make sure first you select the stream and stage where you created the factory <em>(top right)</em>.</p>
 </div>
