--- a/home/techguides/save-as-new-template.html
+++ b/home/techguides/save-as-new-template.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="save-as-new-template">Save as New Template</h1>
 
+<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="save-as-new-template">Save as New Template</h1>
 <p>You can easily customize your templates via the <strong>Save as New Template</strong> feature. This self-service functionality enables you to create custom templates from a model bank template in just a few clicks. During this operation component binaries, deployment mechanisms or infrastructure can be changed and new components can be added.</p>
 <p>By clicking on the <strong>Save as New Template</strong>  all the components are copied from the environment GIT Repository to Artifactory and saves them as a new template. </p>
 <p>To customize your template, you need to have at least the mandatory components uploaded and deployed successfully. This is to ensure that there will be no issues in any environment created from the new template (read <a href="http://documentation.temenos.cloud/home/techguides/deploy-an-update-to-an-existing-environment.html">here</a> how you can deploy a component).</p>
