--- a/home/techguides/user-permissions.html
+++ b/home/techguides/user-permissions.html
@@ -79,8 +79,10 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h1 id="user-permissions-overview">User permissions overview</h1>
 
+<div class="NOTE"><h5>Note</h5><p>Note: Starting April 5th the TCD user guide will move on the <a href="https://tcsp.temenos.com/TCD/Modules/TemenosContinuousDeployment/Overview/Overview.htm">Temenos Customer Support Portal (TCSP)</a>. We recommend you to log in to the portal and check if your credentials are available. Raise a ticket at <a href="CloudPlatformSupport@temenos.com">CloudPlatformSupport@temenos.com</a> if you encounter any issues.</p>
+</div>
+<h1 id="user-permissions-overview">User permissions overview</h1>
 <p>This page provides an overview of the permissions that an administrator can assign to a user.</p>
 <table>
 <thead>
